# py-xiaozhi

./: .gitignore  404.html  CONTRIBUTING.md  CONTRIBUTING_ZH.md  README.en.md  README.md  README.zh.md  build.json  contributing.html  contributors.html  ecosystem.html  hashmap.json  index.html  main.py  main_async.py  py-xiaozhi.spec  pyproject.toml  release.py  requirements.txt  requirements_mac.txt
.github/workflows/: build.yml  vitepress.yml
.sisyphus/: boulder.json
.sisyphus/evidence/: task-1-dir-structure.txt  task-2-ts-generated.txt  task-23-final-test.txt  task-4-qtranslator-loading.txt  task-5-string-count.txt
.sisyphus/notepads/: learnings.md
.sisyphus/plans/: settings-retranslatefix.md  ui-translate-revert.md  xiaozhi-i18n-fix.md  xiaozhi-i18n.md
.trellis/: .template-hashes.json  workflow.md
about/: team.html
architecture/: index.html
assets/: about_team.md.BoFpsYIb.lean.js  about_team.md.Dvz25uHw.js  app.B-emA5Q-.js  app.O9x4gHn5.js  architecture_index.md.CjR5kBLm.js  architecture_index.md.CjR5kBLm.lean.js  architecture_index.md.DM7dsRya.js  architecture_index.md.DM7dsRya.lean.js  contributing.md.CSRrm4iS.js  contributing.md.CSRrm4iS.lean.js  contributors.md.D9QdV3j5.js  contributors.md.D9QdV3j5.lean.js  ecosystem.md.CGiGbzL3.js  ecosystem.md.CGiGbzL3.lean.js  ecosystem_index.md.CY6J6gJV.js  ecosystem_index.md.CY6J6gJV.lean.js  guide_00_文档目录.md.B_Bxgd_4.js  guide_00_文档目录.md.B_Bxgd_4.lean.js  guide_00_文档目录.md.Bw4TmQBQ.js  guide_00_文档目录.md.Bw4TmQBQ.lean.js  guide_01_系统依赖安装.md.CWn3hRnu.js  guide_01_系统依赖安装.md.CWn3hRnu.lean.js  guide_01_语音交互模式说明.md.CLj9QbXK.js  guide_01_语音交互模式说明.md.CLj9QbXK.lean.js  guide_02_配置说明.md.BxXcSJnP.js  guide_02_配置说明.md.BxXcSJnP.lean.js  guide_03_系统依赖安装.md.D0nX1lP0.js  guide_03_系统依赖安装.md.D0nX1lP0.lean.js  guide_05_IoT功能说明.md.BtxsWxUc.js  guide_05_IoT功能说明.md.BtxsWxUc.lean.js  guide_08_设备激活流程（占位）.md.D3wLdgRd.js  guide_08_设备激活流程（占位）.md.D3wLdgRd.lean.js  guide_09_打包教程.md.BwhnJiOI.js  guide_09_打包教程.md.BwhnJiOI.lean.js  guide_TTS功能说明.md.CcV_UOmj.js  guide_TTS功能说明.md.CcV_UOmj.lean.js  guide_old_docs_使用文档.md.CeHXbupe.js  guide_old_docs_使用文档.md.CeHXbupe.lean.js  guide_old_docs_使用文档.md.NintJ65l.js  guide_回声消除.md.DAwHsD9g.js  (+103 more)
assets/chunks/: VPApp.vue_vue_type_style_index_0_scoped_e4982c5a_lang.Uyi1rfs_.js  WrenchIcon.DfaKKJWJ.js  framework.d22c6mgx.js  theme.CQHgQiSK.js  theme.D5FYE2uA.js  按钮模块产品二维码.3JFpRcLD.js  系统扬声器选择.CJlyYvMn.js  系统界面.DvG0HJ6a.js
documents/docs/: contributing.md  index.md
ecosystem/: index.html
guide/: 00_文档目录.html  01_系统依赖安装.html  01_语音交互模式说明.html  02_配置说明.html  03_系统依赖安装.html  03_语音交互模式说明.html  04_语音唤醒.html  05_IoT功能说明.html  06_音量控制功能.html  07_视觉识别功能.html  08_设备激活流程.html  08_设备激活流程（占位）.html  09_打包教程.html  TTS功能说明.html  回声消除.html  嵌入式设备.html  开发指南.html  异常汇总.html  快捷键说明.html  打包教程.html  文档目录.html  系统依赖安装.html  设备激活流程.html  语音交互模式说明.html  语音唤醒.html  配置说明.html
guide/old_docs/: 使用文档.html
i18n/: CONTRIBUTING.md  README.md  generate_translations.sh  xiaozhi.pro
i18n/source/: xiaozhi_en_US.ts  xiaozhi_qml_only.ts  xiaozhi_ru_RU.qm  xiaozhi_ru_RU.ts  xiaozhi_test_qml.ts  xiaozhi_vi_VN.ts  xiaozhi_zh_CN.ts
i18n/translations/: xiaozhi_en_US.qm  xiaozhi_ru_RU.qm
iot/: index.html
mcp/: amap.html  bazi.html  calendar.html  camera.html  ha.html  index.html  music.html  railway.html  recipe.html  search.html  system.html  timer.html  xiaozhi-mcp.html
models/en/: README.md  keywords.txt
models/zh/: README.md  configuration.json  keywords.txt
scripts/: Diary_query.py  bundle_ffmpeg.sh  calendar_query.py  debug_audio_devices.py  test_camera_tls.py
sponsors/: index.html
src/: application.py  async_application.py
src/activation/: __init__.py  service.py
src/audio_codecs/: aec_processor.py  audio_buffer.py  audio_codec.py  audio_converter.py  music_decoder.py  opus_codec.py  stream_manager.py
src/audio_processing/: wake_word_detect.py
src/bootstrap/: __init__.py  container.py  protocols.py
src/constants/: constants.py  system.py
src/core/: __init__.py  event_bus.py  ota.py  protocol_manager.py  resource_pool.py  state_manager.py  system_initializer.py  task_manager.py
src/display/: base_display.py  cli_display.py  gui_display.py  gui_display.qml  gui_display.ui  gui_display_model.py
src/iot/: thing_manager.py
src/logging/: __init__.py  config.py  context.py  filters.py  formatters.py  handlers.py  log_config.py  log_handlers.py
src/mcp/: decorators.py  mcp_server.py  tooling.py
src/plugins/: audio.py  base.py  calendar.py  iot.py  manager.py  mcp.py  shortcuts.py  ui.py  wake_word.py
src/ui/: __init__.py
zh/: contributing.html  index.html
(+426 files in other folders)
